# libby

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  demo.c
c2rust/: .gitignore  Cargo.toml  GNUmakefile  README.md  c2rust.c
cdemo/: .gitignore  GNUmakefile  cdemo.c  roll.h
dyroll/: Cargo.toml
dyroll/src/: main.rs
roll/: Cargo.toml
roll/src/: lib.rs
rust2c/: Cargo.toml  Makefile  README.md  build.rs
rust2c/src/: main.rs  mp_dlopen.rs  mp_shared.rs
rust2c/src/mp_int/: gmp_dlopen.rs  gmp_dynamic.rs  gmp_shared.rs  mod.rs
rustroll/: Cargo.toml
rustroll/src/: main.rs
