[package]
name = "rust2c"
version = "0.2.0"
edition = "2021"

[dependencies]
cfg-if = "1.0"
clap = { version = "4.5", features = ["cargo", "derive"] }
dlopen2 = { version = "0.7", optional = true }
lazy_static = { version = "1.5", optional = true }
libc = "0.2"

[features]
default = []
shared = []
dlopen = ["dep:dlopen2", "dep:lazy_static"]
