[package]
name = "rust2c"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "rust2c-shared"
path = "src/main.rs"
required-features = ["shared"]

[[bin]]
name = "rust2c-dlopen"
path = "src/main.rs"
required-features = ["dlopen"]

[dependencies]
anyhow = "1.0.86"
cfg-if = "1.0"
dlopen2 = { version = "0.7", optional = true }
lazy_static = { version = "1.5", optional = true }
libc = "0.2"

[features]
default = []
shared = []
dlopen = ["dep:dlopen2", "dep:lazy_static"]
